Users can update their profile picture.

--- a/TheMusicExchangeProject/Views/Account/Index.cshtml
+++ b/TheMusicExchangeProject/Views/Account/Index.cshtml
@@ -30,7 +30,11 @@
     {
         <article class="card">
             <div class="card-content">
-                <img src="@Url.Action("GenerateProfilePictures", "Account", new {id = item.Users.Id})" height="100" width="100" />
+                <div class="card-frame">
+                    <div class="card-pic">
+                        <img src="@Url.Action("GenerateProfilePictures", "Account", new {id = item.Users.Id})" class="card-pic" />
+                    </div>
+                </div>
                 <h3 class="card-title">
                     @Html.DisplayFor(modelItem => item.Users.Name)
                     @Html.DisplayFor(modelItem => item.Skills.SkillName)
