--- a/TheMusicExchangeProject/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/TheMusicExchangeProject/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -7,10 +7,16 @@
 
 <h4>@ViewData["Title"]</h4>
 <partial name="_StatusMessage" for="StatusMessage" />
-<div class="row">
+<div class="row centered">
     <div class="col-md-6">
-        <form id="profile-form" method="post">
+        <form id="profile-form" method="post" enctype="multipart/form-data">
             <div asp-validation-summary="All" class="text-danger"></div>
+            <img src="@Url.Action("ProfilePictures", "Account")" class="profile-pic"/>
+            <div class="form-group">
+                <label asp-for="Input.ProfilePicture"></label>
+                <input class="form-control" name="Input.ProfilePicture" type="file" 
+                       accept=".png,.jpg,.jpeg,.gif,.tif"/>
+            </div>
             <div class="form-group">
                 <label asp-for="Username"></label>
                 <input asp-for="Username" class="form-control" disabled />
@@ -49,6 +55,7 @@
                     <input asp-for="Input.Postcode" class="form-control" />
                     <span asp-validation-for="Input.Postcode" class="text-danger"></span>
                 </div>
+
             </div>
             <button id="update-profile-button" type="submit" class="btn btn-primary">Save</button>
         </form>
