--- a/TheMusicExchangeProject/wwwroot/css/site.css
+++ b/TheMusicExchangeProject/wwwroot/css/site.css
@@ -9,6 +9,18 @@ for details on configuring this project to bundle and minify static web assets. 
     border: 1px solid #485277;
     border-radius: 3px;
 }
+.profile-pic {
+    height: auto;
+    width: auto;
+    max-width: 50%;
+    max-height: 50%;
+}
+.card-pic{
+    height: auto;
+    width: auto;
+    max-width: 80%;
+    max-height: 80%;
+}
 /* Navigation bar styles
 -------------------------------------------------- */
 a.navbar-brand {
