--- a/TheMusicExchangeProject/Views/Shared/_LoginPartial.cshtml
+++ b/TheMusicExchangeProject/Views/Shared/_LoginPartial.cshtml
@@ -13,7 +13,8 @@
             </a>
         </li>
         <li class="nav-item">
-            <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
+            <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" 
+                asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
                 <button id="logout" type="submit" class="nav-link btn btn-link">Logout</button>
             </form>
         </li>
