Commenting and minor changes

--- a/TheMusicExchangeProject/Views/Account/Index.cshtml
+++ b/TheMusicExchangeProject/Views/Account/Index.cshtml
@@ -23,7 +23,7 @@
         </div>
     </div>
 </form>
-<div class="leftcolumn">
+<div class="leftcolumn" id="leftcolumn">
 <div class="centered">
     <section class="cards">
     @foreach (var item in Model)
