Fixed Chat bug and styling

--- a/TheMusicExchangeProject/Views/Home/Index.cshtml
+++ b/TheMusicExchangeProject/Views/Home/Index.cshtml
@@ -11,14 +11,29 @@
     </section>
     <section id="zero" class="wrapper">
         <div class="inner">
-           <article>
+           <article class="intro-body">
                 <header>
                     <h3 class="intro-title">What is TheMusicExchangeProject?</h3>
                 </header>
                 <p class="intro-text">
                     TheMusicExchangeProject is a free to use platform for anyone interested in music!
+                    <br /> 
                     It doesn't matter if you've only just started learning or have been jamming for years, 
-                    we want to give you a new way to meet others.
+                    we want to give you a new way to meet and socialise with likeminded people!
+                </p>
+                <p class="intro-text">
+                    We aim to give you a safe space to express your personality, interests and find that perfect jamming partner.
+                    <br />
+                    Our friendly team is here to help you with any problems you may have and our unique interface
+                    gives you a new, easy to use way of searching for musicians.
+                </p>
+                <p class="intro-text">
+                    Using our connection system we'll put you in touch with anyone that mutually connects with you, ensuring
+                    that you'll only hear from potential friends.
+                    <br />
+                    Find someone you don't like? Simply disconnect or block them and we'll make sure you never hear from them again!
+                    <br />
+                    To get started simply create a new account, customise your profile and get searching!
                 </p>
            </article>
         </div>
@@ -26,33 +41,58 @@
     <section id="one" class="wrapper">
         <div class="inner">
             <div class="flex flex-3">
-                <article>
+                <article class="welcome-container">
                     <header>
                         <h3 class="title">Meet new people</h3>
                     </header>
                     <p class="welcome-text">
-                        Text about meeting new people and matches
+                        Using our range of search preferences we make it our mission to find the right person for you.
+                        <br />
+                        Search for matches based on the instrument someone plays, the experience level they play at,
+                        at a distance that's convenient for you!
+                        <br />
+                        Create an account or login to start searching for that perfect match.
+                        <br /><br />
                     </p>
                     <footer>
-                        <a asp-area="" asp-controller="Account" asp-action="Index" class="button special">More</a>
+                        <a asp-area="" asp-controller="Account" asp-action="Index" class="btn welcome-button">More</a>
                     </footer>
                 </article>
-                <article>
+                <article class="welcome-container">
                     <header>
-                        <h3 class="title">Customise your skills and skill levels!</h3>
+                        <h3 class="title">Customise your skills!</h3>
                     </header>
-                    <p class="welcome-text">Text about customising skills and skill levels</p>
+                    <p class="welcome-text">
+                        Using our skill management system we make it easy to link the instruments you play 
+                        and the level of experience you have straight to your profile!
+                        <br />
+                        Not only do we help you find others, we also help others find you! 
+                        <br />
+                        Express your musical ability and we'll let the matches come to you.
+                        <br />
+                        Create an account or login to start adding skills to your profile. 
+                    </p>
                     <footer>
-                        <a asp-area="" asp-controller="Skill" asp-action="Index" class="button special">More</a>
+                        <a asp-area="" asp-controller="Skill" asp-action="Index" class="btn welcome-button">More</a>
                     </footer>
                 </article>
-                <article>
+                <article class="welcome-container">
                     <header>
                         <h3 class="title">Chat to others</h3>
                     </header>
-                    <p class="welcome-text">Text about chatting to connected people</p>
+                    <p class="welcome-text">
+                        We are passionate about making your experience easy and stress free!
+                        <br />
+                        As soon as you connect with someone you can start chatting straight away!
+                        <br />
+                        Use our modern, convenient, instant messaging tool for chatting with your new friends.
+                        <br />
+                        Create an account or login to find some matches and start socialising today!
+                        <br />
+                        <br />
+                    </p>
                     <footer>
-                        <a asp-area="" asp-controller="Chat" asp-action="Index" class="button special">More</a>
+                        <a asp-area="" asp-controller="Chat" asp-action="Index" class="btn welcome-button">More</a>
                     </footer>
                 </article>
             </div>
