--- a/TheMusicExchangeProject/Views/Home/Index.cshtml
+++ b/TheMusicExchangeProject/Views/Home/Index.cshtml
@@ -55,7 +55,7 @@
                         <br /><br />
                     </p>
                     <footer>
-                        <a asp-area="" asp-controller="Account" asp-action="Index" class="btn welcome-button">More</a>
+                        <a asp-area="" asp-controller="Account" asp-action="Index" class="welcome-button">More</a>
                     </footer>
                 </article>
                 <article class="welcome-container">
@@ -73,7 +73,7 @@
                         Create an account or login to start adding skills to your profile. 
                     </p>
                     <footer>
-                        <a asp-area="" asp-controller="Skill" asp-action="Index" class="btn welcome-button">More</a>
+                        <a asp-area="" asp-controller="Skill" asp-action="Index" class="welcome-button">More</a>
                     </footer>
                 </article>
                 <article class="welcome-container">
@@ -92,7 +92,7 @@
                         <br />
                     </p>
                     <footer>
-                        <a asp-area="" asp-controller="Chat" asp-action="Index" class="btn welcome-button">More</a>
+                        <a asp-area="" asp-controller="Chat" asp-action="Index" class="welcome-button">More</a>
                     </footer>
                 </article>
             </div>
