--- a/TheMusicExchangeProject/Views/_ViewImports.cshtml
+++ b/TheMusicExchangeProject/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using TheMusicExchangeProject
 @using TheMusicExchangeProject.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, Syncfusion.EJ2
