--- a/TheMusicExchangeProject/wwwroot/css/site.css
+++ b/TheMusicExchangeProject/wwwroot/css/site.css
@@ -8,6 +8,8 @@ for details on configuring this project to bundle and minify static web assets. 
     background: #C0D9E1;
     border: 1px solid #485277;
     border-radius: 3px;
+    -webkit-box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 5px rgba(0,0,0,0);
+    box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 5px rgba(0,0,0,0);
 }
 .profile-pic {
     height: auto;
@@ -15,12 +17,7 @@ for details on configuring this project to bundle and minify static web assets. 
     max-width: 50%;
     max-height: 50%;
 }
-.card-pic{
-    height: auto;
-    width: auto;
-    max-width: 80%;
-    max-height: 80%;
-}
+
 /* Navigation bar styles
 -------------------------------------------------- */
 a.navbar-brand {
@@ -458,10 +455,7 @@ section.wrapper, article.wrapper {
 
 /*Profile Cards
     ------------------------------------------------ */
-#search {
-    background-color: #485277;
-    
-}
+
 
 .hidden{
     display: none;
@@ -481,6 +475,20 @@ p {
     padding: 0 1em;
 }
 
+/*.card-pic {
+    height: auto;
+    width: auto;
+    max-width: 80%;
+    max-height: 80%;
+
+}*/
+.card-pic {
+    background-size: cover;
+    border-radius: 50% 50% 50% 50%;
+    width: 11em;
+    height: 11em;
+    margin: 1em;
+}
 @media screen and (min-width: 52em) {
     .centered {
         max-width: 52em;
@@ -489,6 +497,8 @@ p {
 .card {
     background: white;
     margin-bottom: 2em;
+    -webkit-box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 5px rgba(0,0,0,0);
+    box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 5px rgba(0,0,0,0);
 }
 
     .card a {
@@ -620,6 +630,27 @@ p {
     .block-btn:hover {
         background: rgb(229, 17, 17);
     }
+
+.e-control-wrapper.e-slider-container .e-slider .e-handle {
+    background-color: #D95D39;
+    border-color: #D95D39;
+}
+.e-control.e-slider .e-slider-track .e-range {
+    background: #D95D39;
+}
+.e-slider-tooltip.e-tooltip-wrap.e-popup.e-tooltip-wrap.e-popup.e-material-default {
+    background-color: #D95D39;
+}
+.slider-labeltext {
+    text-align: center;
+    padding-top: 0.5em;
+}
+.searching {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+}
 
 /* Chat window
     ------------------------------------------------ */
