--- a/TheMusicExchangeProject/Views/Home/Index.cshtml
+++ b/TheMusicExchangeProject/Views/Home/Index.cshtml
@@ -33,7 +33,7 @@
                     <br />
                     Find someone you don't like? Simply disconnect or block them and we'll make sure you never hear from them again!
                     <br />
-                    To get started simply create a new account, customise your profile and get searching!
+                    To get started simply create an new account, customise your profile and get searching!
                 </p>
            </article>
         </div>
