--- a/TheMusicExchangeProject/Views/Skill/Create.cshtml
+++ b/TheMusicExchangeProject/Views/Skill/Create.cshtml
@@ -5,36 +5,45 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Create</h1>
-
-<div class="row">
-    <div class="col-md-4">
+<div class="row login-body">
+    <div class="prev-page">
+        <a asp-controller="Skill" asp-action="Index" class="arrow left">
+            <svg width="60px" height="80px" viewBox="0 0 50 80" xml:space="preserve">
+            <polyline fill="none" stroke="#F18805" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" points="
+	            45.63,75.8 0.375,38.087 45.63,0.375 " />
+            </svg>
+        </a>
+    </div>
+    <div class="col-md-4 login-inner centered">
         <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="SkillName" class="control-label"></label>
-                <input asp-for="SkillName" class="form-control" />
-                <span asp-validation-for="SkillName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input asp-for="UserID" class="form-control" value="Author" hidden />
-                <span asp-validation-for="UserID" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Description" class="control-label"></label>
-                <textarea asp-for="Description" class="form-control"></textarea>
-                <span asp-validation-for="Description" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                Skill level: <select name="selectedLevel" asp-items="ViewBag.levels" value="@ViewData" ["skillLevel"]"></select>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
+            <h3 class="skills-name">Add a new skill!</h3>
+            <hr />
+            <div class="login-content">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <div class="form-group create-labels">
+                    <label asp-for="SkillName" class="control-label">Skill Name</label>
+                    <input asp-for="SkillName" class="form-control" />
+                    <span asp-validation-for="SkillName" class="text-danger"></span>
+                </div>
+                <div class="form-group create-labels">
+                    <input asp-for="UserID" class="form-control" value="Author" hidden />
+                    <span asp-validation-for="UserID" class="text-danger"></span>
+                </div>
+                <div class="form-group create-labels">
+                    <label asp-for="Description" class="control-label"></label>
+                    <textarea asp-for="Description" class="form-control"></textarea>
+                    <span asp-validation-for="Description" class="text-danger"></span>
+                </div>
+                <div class="form-group create-labels" style="margin-bottom:0;">
+                    <label class="control-label">Skill level: </label>
+                </div>
+                <div class="form-group create-labels">
+                    <select name="selectedLevel" asp-items="ViewBag.levels" value="@ViewData" ["skillLevel"]"></select>
+                </div>
+                <div class="form-group">
+                    <input type="submit" value="Create" class="create-btn" />
+                </div>
+            </div>          
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
