--- a/TheMusicExchangeProject/Views/Skill/Index.cshtml
+++ b/TheMusicExchangeProject/Views/Skill/Index.cshtml
@@ -4,45 +4,26 @@
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
-<h1>Index</h1>
-
-<p>
-    <a asp-action="Create">Create New Skill</a>
+<header class="search-header">
+    <h3 class="search-title">Manage your skills!</h3>
+</header>
+<p class="table-top">
+    <a asp-action="Create" class="create-btn">ADD A  NEW SKILL</a>
 </p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                Skill Name: 
-            </th>
-            <th>
-                Description:
-            </th>
-            <th>
-                Skill Level:
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model)
-        {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Skills.SkillName)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Skills.Description)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.SkillLevel)
-                </td>
-                <td>
-                    <a asp-action="Edit" asp-route-id="@item.Skills.SkillID">Edit</a> |
-                    <a asp-action="Delete" asp-route-id="@item.Skills.SkillID">Delete</a>
-                </td>
-            </tr>
-        }
-    </tbody>
-</table>
+<div class="table-background">
+    <div class="table-container">
+        <div class="panel skills-table">
+            @foreach (var item in Model)
+            {
+                <div class="skills-object">
+                    <h2 class="skills-name">@Html.DisplayFor(modelItem => item.Skills.SkillName)</h2>
+                    <ul class="skills-details">
+                        <li class="skills-item">@Html.DisplayFor(modelItem => item.SkillLevel)</li>
+                        <li class="skills-item">@Html.DisplayFor(modelItem => item.Skills.Description)</li>
+                    </ul>
+                    <a asp-action="Delete" asp-route-id="@item.Skills.SkillID" class="delete-btn">Delete</a>
+                </div>
+            }
+        </div>
+    </div>
+</div>
